<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">






    <LinearLayout
        android:id="@+id/primertexto"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"

        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="50dp"
            android:paddingLeft="35dp"

            android:text="@string/Calculadora"

            android:textAppearance="@style/CardView.Dark"
            android:textSize="30.0dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/segundalinea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/primertexto"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/primerooperando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Primer_Operando"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/operandouno"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:editable="true"

            android:hint="@string/Introduce_Operando"

            android:inputType="text" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/terceralinea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/segundalinea"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Segundooperando"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/operandodos"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:editable="true"

            android:hint="@string/Introduce_Operando"

            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Cuartalinea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/terceralinea"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/operacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Indicar_operacion"
            android:textSize="16sp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/quintalinea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/Cuartalinea"
        android:orientation="horizontal">

        <RadioGroup

            android:id="@+id/grupodeoperaciones"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/suma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Suma"></RadioButton>

            <RadioButton
                android:id="@+id/resta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Resta"></RadioButton>

            <RadioButton
                android:id="@+id/multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplicacion"></RadioButton>
            <RadioButton
                android:id="@+id/divi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Division"></RadioButton>
        </RadioGroup>



    </LinearLayout>



    <LinearLayout
        android:id="@+id/Sextalinea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/quintalinea"
        android:orientation="horizontal">


        <Button
            android:id="@+id/calcular"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textColor="@color/design_default_color_background"
            android:layout_marginRight="10dp"
            android:text="@string/Calcular">

        </Button>

        <Button
            android:id="@+id/borrar"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/design_default_color_background"
            android:text="@string/Borrar"></Button>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/Septimalinea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/Sextalinea"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="200dp"
            android:background="@color/cardview_shadow_start_color"
            android:layout_marginRight="20dp"
            style="@style/textstyle"></TextView>


    </LinearLayout>










</androidx.constraintlayout.widget.ConstraintLayout>